#000 : Dolly : Fix csw-services.sh script to work with both JDK 8 and 11.